--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
 		android:id = "@+id/drawer_layout"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
+		app:setDrawerLockMode = "@{DrawerLayout.LOCK_MODE_LOCKED_CLOSED}"
 
-        app:openDrawer="@{GravityCompat.END}"
 		>
 
 		<androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +40,7 @@
 				android:layout_width = "0dp"
 				android:layout_height = "0dp"
 				app:layout_constraintTop_toTopOf = "parent"
-				app:layout_constraintBottom_toTopOf = "@+id/include_02"
+				app:layout_constraintBottom_toTopOf = "@+id/menu_bottom"
 				app:layout_constraintStart_toStartOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
 				/>
@@ -52,16 +52,22 @@
 				android:layout_height = "wrap_content"
 				/>
 
-			<include
-				android:id = "@+id/include_02"
-				layout = "@layout/c_menu_bottom"
-				android:layout_width = "0dp"
-				android:layout_height = "wrap_content"
-				app:layout_constraintTop_toBottomOf = "@+id/fragment_container"
-				app:layout_constraintBottom_toBottomOf = "parent"
-				app:layout_constraintStart_toStartOf = "parent"
-				app:layout_constraintEnd_toEndOf = "parent"
-				/>
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/menu_bottom"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf = "@+id/fragment_container"
+                    app:layout_constraintBottom_toBottomOf = "parent"
+                    app:layout_constraintStart_toStartOf = "parent"
+                    app:layout_constraintEnd_toEndOf = "parent"
+                    android:background="@color/theme_1_color_1"
+                    app:menu="@menu/bottom"
+                    app:itemIconTint="@drawable/selector_menu"
+                    app:itemTextColor="@drawable/selector_menu"
+                    app:labelVisibilityMode="labeled"
+                    android:visibility="gone"
+
+            />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 		<!--The navigation drawer -->
 		<com.google.android.material.navigation.NavigationView
@@ -84,3 +90,6 @@
 		</com.google.android.material.navigation.NavigationView>
 	</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
+
+<!--app:onNavigationItemSelected="@{viewmodel::onNavigationClick}" для bottomnavigation
+app:openDrawer="@{GravityCompat.END}" для правого меню-->
