--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name = "viewmodel"
+                type = "ru.jobni.jobni.viewmodel.MainViewModel"
+        />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,5 +26,7 @@
             app:itemTextColor="@drawable/selector_menu"
             app:labelVisibilityMode="labeled"
             android:visibility="gone"
+
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
