--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	>
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id = "@+id/rv_cards"
-		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		android:layout_marginTop = "?attr/actionBarSize"
-		app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
-		android:scrollbars = "vertical"
-		/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_cards"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="?attr/actionBarSize"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:scrollbars="vertical"
+        />
 
-	<ListView
-		android:id = "@+id/lv_suggestions"
-		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@+id/rv_cards"
-		android:background = "@color/white"
-		tools:layout_editor_absoluteX = "0dp"
-		/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ListView
+                android:id="@+id/lv_suggestions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/rv_cards"
+                android:background="@color/white"
+                tools:layout_editor_absoluteX="0dp"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
