--- a/app/src/main/res/layout/c_intro_05.xml
+++ b/app/src/main/res/layout/c_intro_05.xml
@@ -60,7 +60,7 @@
 			android:layout_marginEnd = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/ready"
-			android:onClick="@{() -> viewmodel.onClickBtnStart()}"
+			android:onClick='@{() -> viewmodel.onClickBtnStart("Welcome")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
