--- a/app/src/main/res/layout/c_menu_top.xml
+++ b/app/src/main/res/layout/c_menu_top.xml
@@ -2,15 +2,16 @@
 <layout>
     <data>
         <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
+        <import type="android.view.View" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:id="@+id/constraint_layout_menu_top"
+            android:visibility="@{viewmodel.isToolbarVisible()? View.VISIBLE : View.INVISIBLE}"
             android:focusableInTouchMode="true"
+            android:id="@+id/toolbar_layout"
     >
 
         <androidx.appcompat.widget.Toolbar
@@ -22,7 +23,7 @@
         />
 
         <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_main"
+                android:id="@+id/searchview_toolbar"
                 android:layout_width="0dp"
                 android:layout_height="46dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +37,8 @@
                 android:singleLine="true"
                 app:queryBackground="@android:color/transparent"
                 app:layout_constraintHorizontal_bias="0.494"
-                android:visibility="gone"
+                android:visibility="@{viewmodel.isSearchViewVisible()? View.VISIBLE : View.INVISIBLE}"
+                app:queryHint="@string/search_view_hint"
         />
 
         <Button
