--- a/app/src/main/res/layout/c_search.xml
+++ b/app/src/main/res/layout/c_search.xml
@@ -1,75 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	>
+<layout>
 
-	<com.google.android.material.tabs.TabLayout
-		android:id = "@+id/search_tab_layout"
-		android:layout_width = "0dp"
-		android:layout_height = "60dp"
-		app:layout_constraintBottom_toTopOf = "@+id/search_welcome"
-		app:layout_constraintStart_toStartOf = "@+id/search_welcome"
-		app:layout_constraintEnd_toEndOf = "@+id/search_welcome"
-		android:layout_marginBottom = "48dp"
-		style = "@style/search_tab_layout"
-		>
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
+        <import type="android.view.View" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
 
-		<com.google.android.material.tabs.TabItem
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_vacancy"
-			/>
+        <com.google.android.material.tabs.TabLayout
+                android:id="@+id/search_tab_layout"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                app:layout_constraintBottom_toTopOf="@+id/search_welcome"
+                app:layout_constraintStart_toStartOf="@+id/search_welcome"
+                app:layout_constraintEnd_toEndOf="@+id/search_welcome"
+                android:layout_marginBottom="48dp"
+                style="@style/search_tab_layout"
+        >
 
-		<com.google.android.material.tabs.TabItem
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_company"
-			/>
+            <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tab_vacancy"
+            />
 
-		<com.google.android.material.tabs.TabItem
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_resume"
-			/>
+            <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tab_company"
+            />
 
-		<com.google.android.material.tabs.TabItem
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/search_tab_candidate"
-			/>
-	</com.google.android.material.tabs.TabLayout>
+            <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tab_resume"
+            />
 
-	<Button
-		android:id = "@+id/search_welcome"
-		android:layout_width = "0dp"
-		android:layout_height = "50dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:background = "@color/theme_1_hover"
-		android:textColor = "@color/font_color"
-		android:textSize = "14sp"
-		android:text = "@string/search_view_hint"
-		android:drawableStart = "@android:drawable/ic_menu_search"
-		android:paddingStart="90dp"
-		android:paddingEnd="8dp"
-		android:textAlignment = "textStart"
-		/>
+            <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tab_candidate"
+            />
+        </com.google.android.material.tabs.TabLayout>
 
-	<Button
-		android:id = "@+id/search_button_welcome"
-		android:layout_width = "0dp"
-		android:layout_height = "50dp"
-		app:layout_constraintTop_toBottomOf = "@+id/search_welcome"
-		app:layout_constraintStart_toStartOf = "@+id/search_welcome"
-		app:layout_constraintEnd_toEndOf = "@+id/search_welcome"
-		android:layout_marginTop = "48dp"
-		android:background = "@drawable/shape_button"
-		android:textColor = "@color/font_color"
-		android:text = "@string/search_button"
-		/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+                android:id="@+id/search_welcome"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/theme_1_hover"
+                android:textColor="@color/font_color"
+                android:textSize="14sp"
+                android:text="@string/search_view_hint"
+                android:drawableStart="@android:drawable/ic_menu_search"
+                android:paddingStart="90dp"
+                android:paddingEnd="8dp"
+                android:textAlignment="textStart"
+                android:onClick='@{() -> viewmodel.onClickBtnStart("Main_focus")}'
+        />
+
+        <Button
+                android:id="@+id/search_button_welcome"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@+id/search_welcome"
+                app:layout_constraintStart_toStartOf="@+id/search_welcome"
+                app:layout_constraintEnd_toEndOf="@+id/search_welcome"
+                android:layout_marginTop="48dp"
+                android:background="@drawable/shape_button"
+                android:textColor="@color/font_color"
+                android:text="@string/search_button"
+                android:onClick='@{() -> viewmodel.onClickBtnStart("Main_cards")}'
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
