--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	>
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id = "@+id/rv_cards"
-		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		android:layout_marginTop = "?attr/actionBarSize"
-		android:scrollbars = "vertical"
-		/>
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
+    </data>
 
-	<ListView
-		android:id = "@+id/lv_suggestions"
-		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@+id/rv_cards"
-		android:background = "@color/white"
-		tools:layout_editor_absoluteX = "0dp"
-		/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
+
+        <include
+                layout="@layout/c_menu_top"
+                app:viewmodel="@{viewmodel}"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/main_toolbar"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_cards"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:scrollbars="vertical"
+                app:onScrollListener="@{viewmodel.onScrollViewRecycler}"
+                app:layout_constraintTop_toBottomOf="@+id/main_toolbar"/>
+
+        <ListView
+                android:id="@+id/lv_suggestions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/rv_cards"
+                android:background="@color/white"
+                tools:layout_editor_absoluteX="0dp"
+                android:onItemSelected="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
