--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,6 +29,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:scrollbars="vertical"
                 app:onScrollListener="@{viewmodel.onScrollViewRecycler}"
+                app:fixedSize="@{true}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@+id/main_toolbar"/>
 
         <ListView
@@ -39,7 +41,7 @@
                 android:background="@color/white"
                 tools:layout_editor_absoluteX="0dp"
                 android:visibility="@{viewmodel.isSearchListViewVisible() ? View.VISIBLE : View.GONE}"
-                app:onItemClickListener="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
+                app:onListViewItemClickListener="@{(parent, viewClick, position, id) -> viewmodel.onSuggestionsListItemClick(position)}"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
