--- a/app/src/main/res/layout/c_registration_01_mail.xml
+++ b/app/src/main/res/layout/c_registration_01_mail.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
+<layout
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<data>
+		<variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+	</data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
@@ -24,7 +31,8 @@
 		android:layout_marginHorizontal = "16dp"
 		style = "@style/text_color_and_size"
 		android:inputType = "text"
-		android:hint = "@string/referral_link"/>
+		android:hint = "@string/referral_link"
+		android:text="@={viewmodel.regReferer}"/>
 	<TextView android:id = "@+id/referral_message"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
@@ -53,7 +61,8 @@
 		android:layout_marginHorizontal = "16dp"
 		style = "@style/text_color_and_size"
 		android:inputType = "textEmailAddress"
-		android:hint = "@string/mail_1"/>
+		android:hint = "@string/mail_1"
+			  android:text="@={viewmodel.regMail}"/>
 	<EditText android:id = "@+id/password_1"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -63,7 +72,8 @@
 		android:layout_marginTop = "16dp"
 		style = "@style/text_color_and_size"
 		android:inputType = "textPassword|numberPassword"
-		android:hint = "@string/password_1"/>
+		android:hint = "@string/password_1"
+			  android:text="@={viewmodel.regPassword}"/>
 	<EditText android:id = "@+id/password_2"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -73,7 +83,8 @@
 		android:layout_marginTop = "16dp"
 		style = "@style/text_color_and_size"
 		android:inputType = "textPassword|numberPassword"
-		android:hint = "@string/password_4"/>
+		android:hint = "@string/password_4"
+			  android:text="@={viewmodel.regPassConfirm}"/>
 	<Button android:id = "@+id/bind_account"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
@@ -84,3 +95,4 @@
 		android:background = "@drawable/shape_button"
 		android:text = "@string/bind_account"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
