--- a/app/src/main/res/layout/c_registration_02.xml
+++ b/app/src/main/res/layout/c_registration_02.xml
@@ -1,64 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	tools:context = ".MainActivity">
-	<ImageView android:id = "@+id/background"
-		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/shape_card"/>
-	<ImageButton android:id = "@+id/logo"
-		android:layout_width = "180dp"
-		android:layout_height = "180dp"
-		app:layout_constraintTop_toTopOf = "@+id/background"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_user"/>
-	<EditText android:id = "@+id/surname"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/logo"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		android:layout_marginHorizontal = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "text"
-		android:hint = "@string/surname"/>
-	<EditText android:id = "@+id/name"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/surname"
-		app:layout_constraintStart_toStartOf = "@+id/surname"
-		app:layout_constraintEnd_toEndOf = "@+id/surname"
-		android:layout_marginTop = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "text"
-		android:hint = "@string/name"/>
-	<EditText android:id = "@+id/middle_name"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/name"
-		app:layout_constraintStart_toStartOf = "@+id/surname"
-		app:layout_constraintEnd_toEndOf = "@+id/surname"
-		android:layout_marginTop = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "text"
-		android:hint = "@string/middle_name"/>
-	<Button android:id="@+id/next"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			app:layout_constraintEnd_toEndOf="@+id/background"
-			android:layout_marginEnd="8dp"
-			android:background="@drawable/shape_button"
-			android:text="@string/next" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-			android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/middle_name"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
+        <ImageView android:id="@+id/background"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   app:layout_constraintTop_toTopOf="parent" android:contentDescription="TODO"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   android:layout_margin="16dp"
+                   android:background="@drawable/shape_card"/>
+        <ImageButton android:id="@+id/logo"
+                     android:layout_width="180dp"
+                     android:layout_height="180dp"
+                     app:layout_constraintTop_toTopOf="@+id/background"
+                     app:layout_constraintStart_toStartOf="@+id/background"
+                     app:layout_constraintEnd_toEndOf="@+id/background"
+                     android:layout_marginTop="16dp"
+                     android:contentDescription="TODO" app:srcCompat="@drawable/ic_user"/>
+        <EditText android:id="@+id/surname"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/logo"
+                  app:layout_constraintStart_toStartOf="@+id/background"
+                  app:layout_constraintEnd_toEndOf="@+id/background"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginHorizontal="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="text"
+                  android:hint="@string/surname"
+                  android:text="@={viewmodel.regSurname}"/>
+        <EditText android:id="@+id/name"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/surname"
+                  app:layout_constraintStart_toStartOf="@+id/surname"
+                  app:layout_constraintEnd_toEndOf="@+id/surname"
+                  android:layout_marginTop="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="text"
+                  android:hint="@string/name"
+                  android:text="@={viewmodel.regName}"/>
+        <EditText android:id="@+id/middle_name"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@+id/name"
+                  app:layout_constraintStart_toStartOf="@+id/surname"
+                  app:layout_constraintEnd_toEndOf="@+id/surname"
+                  android:layout_marginTop="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="text"
+                  android:hint="@string/middle_name"
+                  android:text="@={viewmodel.regMiddlename}"/>
+        <Button android:id="@+id/next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/shape_button"
+                android:text="@string/next" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/middle_name"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
