--- a/app/src/main/res/layout/c_registration_03.xml
+++ b/app/src/main/res/layout/c_registration_03.xml
@@ -1,48 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	tools:context = ".MainActivity">
-	<ImageView android:id = "@+id/background"
-		android:layout_width = "match_parent"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toTopOf = "parent" android:contentDescription="TODO" 
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/shape_card"/>
-	<EditText android:id = "@+id/surname"
-		android:layout_width = "0dp"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@+id/background"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		android:layout_marginHorizontal = "16dp"
-		style = "@style/text_color_and_size"
-		android:inputType = "text"
-		android:hint = "@string/phone_number"
-		android:textAlignment = "textEnd"/>
-	<com.google.android.material.floatingactionbutton.FloatingActionButton android:id = "@+id/floatingActionButton"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toBottomOf = "@+id/surname"
-		app:layout_constraintStart_toStartOf = "@+id/background"
-		app:layout_constraintEnd_toEndOf = "@+id/background"
-		android:layout_marginTop = "16dp"
-		app:backgroundTint = "@color/theme_1_color_1"
-		android:focusable="true" app:srcCompat = "@drawable/ic_plus"
-		android:clickable = "true"/>
-	<Button android:id = "@+id/registration"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintBottom_toBottomOf = "@+id/background"
-			app:layout_constraintEnd_toEndOf = "@+id/background"
-			android:layout_marginBottom = "16dp"
-			android:layout_marginEnd = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/registration"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
+        <ImageView android:id="@+id/background"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   app:layout_constraintTop_toTopOf="parent" android:contentDescription="TODO"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   android:layout_margin="16dp"
+                   android:background="@drawable/shape_card"/>
+        <EditText android:id="@+id/contact_01"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toTopOf="@+id/background"
+                  app:layout_constraintStart_toStartOf="@+id/background"
+                  app:layout_constraintEnd_toEndOf="@+id/background"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginHorizontal="16dp"
+                  style="@style/text_color_and_size"
+                  android:inputType="text"
+                  android:hint="@string/phone_number"
+                  android:textAlignment="textEnd"
+                  android:text="@={viewmodel.regContact}"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/contact_01"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginTop="16dp"
+                app:backgroundTint="@color/theme_1_color_1"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_plus"
+                android:clickable="true"/>
+        <Button android:id="@+id/registration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/shape_button"
+                android:text="@string/registration" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
+        android:onClick="@{() -> viewmodel.btnRegClick()}"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
