--- a/app/src/main/res/layout/e_registration.xml
+++ b/app/src/main/res/layout/e_registration.xml
@@ -12,18 +12,18 @@
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		layout = "@layout/c_menu_top_search"/>
-	<ExpandableListView android:id = "@+id/exp_list_view"
-		android:layout_width = "0dp"
-		android:layout_height = "0dp"
-		app:layout_constraintTop_toBottomOf = "@+id/include_01"
-		app:layout_constraintBottom_toTopOf = "@+id/include_02"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"></ExpandableListView>
 	<include android:id = "@+id/include_02"
-		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-		layout = "@layout/c_menu_bottom"/>
+			 android:layout_width = "match_parent"
+			 android:layout_height = "wrap_content"
+			 app:layout_constraintBottom_toBottomOf = "parent"
+			 app:layout_constraintStart_toStartOf = "parent"
+			 app:layout_constraintEnd_toEndOf = "parent"
+			 layout = "@layout/c_menu_bottom"/>
+	<ExpandableListView android:id="@+id/exp_list_view"
+						android:layout_width="0dp"
+						android:layout_height="0dp"
+						app:layout_constraintTop_toBottomOf="@+id/include_01"
+						app:layout_constraintBottom_toTopOf="@+id/include_02"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"></ExpandableListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
