--- a/app/src/main/res/layout/fragment_reg_recycler.xml
+++ b/app/src/main/res/layout/fragment_reg_recycler.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	android:orientation = "vertical"
-	>
+<layout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/recycler_reg"
-		android:layout_marginTop = "?attr/actionBarSize"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+    >
+        <include
+                layout="@layout/c_menu_top"
+                app:viewmodel="@{viewmodel}"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/reg_toolbar"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_reg"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
